5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1800_2567.log
== TEST (2019-06-06 11:04:15) 
-- CODE:
from numpy import *
f = *

print(f)
-- ERROR:
File "XXXX", line 2
    f = *
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:20) 
-- CODE:
from numpy import *
f = *

print(f)
-- EXECUTION TIME:
0.923857
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 2
    f = *
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:28) 
-- CODE:
from numpy import *
f = "*"

print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:30) 
-- CODE:
from numpy import *
f = "*"

print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:05:03) 
-- CODE:
from numpy import *
n = input("Valor")
f = "*"
print(n*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:05:11) 
-- CODE:
from numpy import *
n = input("Valor: ")
f = "*"
print(n*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:05:22) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"
print(n*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:05:27) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"
print(n*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:06:35) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in n:
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:06:41) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in n:
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:06:51) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in range(n):
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:06:54) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in range(n):
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:07:08) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in range(n):
	f = n*f
	
print(f)	
-- EXECUTION TIME:
2.26486
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:

-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
Valor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:07:09) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for x in range(n):
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:09:06) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for i in range(n):
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:09:20) 
-- CODE:
from numpy import *
n = int(input("Valor: "))
f = "*"

for i in range(n):
	f = n*f
	
print(f)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:36:43) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"

for i in range(size(n)):
	f = f*n[i]
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:36:58) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"

for i in range(size(n)):
	f = f*n
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:37:15) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"

for x in (n):
	f = f*n
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:37:34) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"

for x in range(n):
	f = f*n
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:37:48) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"

for x in range(n):
	f = f*n
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:40:59) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
while(i < n):
	print(f*n)
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:41:24) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 1
while(i < n):
	print(f*(n - i))
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:41:36) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
while(i < n):
	print(f*(n - i))
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:07) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(n):
	print(f*(n[i]))
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:43:59) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(n):
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:00) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(n):
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:44:02) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(n):
	print(f*n[i])
	

	
-- EXECUTION TIME:
0.810787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2567/main.py", line 6, in <module>
    print(f*n[i])
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:05) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(n):
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:13) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(size(n)):
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:18) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
f = "*"
i = 0
for i in range(size(n)):
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:53) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n)
f = "*"
i = 0
for i in vet:
	print(f*n[i])
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:09) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n)
f = "*"
i = 0
for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:27) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(1:n)
f = "*"
i = 0
for x in vet:
	print(f*x)
	

	
-- ERROR:
File "XXXX", line 3
    vet = arange(1:n)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:35) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = range(1:n)
f = "*"
i = 0
for x in vet:
	print(f*x)
	

	
-- ERROR:
File "XXXX", line 3
    vet = range(1:n)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:55) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0
for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:01) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0
for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:42) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0
for x in vet[-1]:
	print(f*x)
for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:47:07) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0

for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:47:12) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0

for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:04:23) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = 0

for x in vet:
	print(f*x)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:05:54) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = -1

for x in vet:
	print(f*x)
	
for i in size(vet):
	print(vet[i]*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:06:15) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = -1

for x in vet:
	print(f*x)
	
for i in size(vet):
	print(vet[i]*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:06:26) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
vet = arange(n+1)
f = "*"
i = -1

for x in vet:
	print(f*x)
	
for i in range(size(vet)):
	print(vet[i]*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:09:04) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for x in vet:
	print(x*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:09:16) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for x in vet:
	print(x*a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:09:23) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for x in vet:
	print(x*a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:10:02) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for y in vet:
	print(y*a)

for x in vet:
	print(x*a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:10:12) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for y in vet:
	print(y*a)
for x in vet:
	print(x*a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:10:20) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for y in vet:
	print(y*a)
for x in vet:
	print(x*a)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:59) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for x in max(vet):
	print(x*a)

for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:21) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for x in range(max(vet)):
	print(x*a)

for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:46) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)



for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:51) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)



for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:49) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for i in range(x):
	print(x*a)
	x = x -1
	
for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:05) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for i in range(n):
	print(x*a)
	x = x -1
	
for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:21:20) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for i in range(n):
	print(n*a)
	n = n -1
	
for x in vet:
	print(x*a)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:21:30) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for i in range(n):
	print(n*a)
	n = n -1
	
for x in vet:
	print(x*a)


	
-- EXECUTION TIME:
0.788113
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:22:01) 
-- CODE:
from numpy import *
n = int(input("Quantidade: "))
a = "*"
vet = arange(n + 1)

for i in range(n):
	print(n*a)
	n = n - 1
	
for x in vet:
	print(x*a)


	
-- EXECUTION TIME:
0.859888
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
